--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,26 +4,32 @@ bind s split-window
 bind v split-window -h
 bind + resize-pane -R 4
 bind - resize-pane -L 4
+bind j choose-session
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -g default-terminal "screen-256color"
-set -g default-command /bin/zsh
 
 unbind C-b
 set -g prefix C-s
 
-#set -g status-position top
+set -g status-position top
+set-option -g status-bg colour8
+set-option -g status-fg colour7
+set-option -g window-status-current-fg colour10
+#set -g status-justify centre
+# set -g status-width-left 300
+set -g status-left '[#S] '
+set -g status-right-length 200
+set -g status-right '#{pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) '
+
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
-set -g display-panes-time 1500
+set -g display-panes-time 150
 
-set-option -g status-bg colour8
-set-option -g status-fg colour7
 set-option -g message-bg colour8
 set-option -g message-fg colour11
-set-option -g window-status-current-fg colour10
 set-option -g pane-border-fg colour0
 set-option -g pane-active-border-fg colour0
 set-option -g mouse on
