--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ bind - resize-pane -L 4
 bind j choose-session
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+#bind k send-keys -R \; clear-history
+bind k send-keys C-l \; clear-history
 
 set -g default-terminal "screen-256color"
 
@@ -21,7 +23,7 @@ set-option -g window-status-current-fg colour10
 # set -g status-width-left 300
 set -g status-left '[#S] '
 set -g status-right-length 200
-set -g status-right '#{pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) '
+set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
 
 set -g base-index 1
 set -g pane-base-index 1
