update status bar sizing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,8 +22,9 @@ set-option -g window-status-current-fg colour10
 #set -g status-justify centre
 # set -g status-width-left 300
 set -g status-left '[#S] '
-set -g status-right-length 200
+set -g status-left-length 24
 set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
+set -g status-right-length 200
 
 set -g base-index 1
 set -g pane-base-index 1
