--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	quotepath = false
-	excludesfile = /Users/jeremy/.gitignore_global
+	excludesfile = ~/.gitignore_global
 
 [alias]
 	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
