--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,26 +16,23 @@ unbind C-b
 set -g prefix C-s
 
 set -g status-position top
-set-option -g status-bg colour8
-set-option -g status-fg colour7
-set-option -g window-status-current-fg colour10
-#set -g status-justify centre
-# set -g status-width-left 300
 set -g status-left '[#S] '
 set -g status-left-length 24
 set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
 set -g status-right-length 200
+
+set -g status-style fg=colour7,bg=colour8
+set -g window-status-current-style fg=colour10
+set -g message-style fg=colour11,bg=colour8
+set -g pane-border-style fg=colour0
+set -g pane-active-border-style fg=colour0
 
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g display-panes-time 150
 
-set-option -g message-bg colour8
-set-option -g message-fg colour11
-set-option -g pane-border-fg colour0
-set-option -g pane-active-border-fg colour0
-set-option -g mouse on
+set -g mouse on
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
