--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g status-left-length 24
 set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
 set -g status-right-length 200
 
-set -g status-style fg=colour7,bg=colour8
+set -g status-style fg=colour7#,bg=colour8
 set -g window-status-current-style fg=colour10
 set -g message-style fg=colour11,bg=colour8
 set -g pane-border-style fg=colour0
