update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g status-left-length 24
 set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
 set -g status-right-length 200
 
-set -g status-style fg=colour7#,bg=colour8
+set -g status-style fg=colour7
 set -g window-status-current-style fg=colour10
 set -g message-style fg=colour11,bg=colour8
 set -g pane-border-style fg=colour8
@@ -42,4 +42,3 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
