--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #bind k send-keys -R \; clear-history
 bind k send-keys C-l \; clear-history
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color-italic"
 
 unbind C-b
 set -g prefix C-s
