--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,9 @@ set -g display-panes-time 150
 
 set -g mouse on
 
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
