update tmux and fish colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,16 +14,17 @@ unbind C-b
 set -g prefix C-s
 
 set -g status-position top
-set -g status-left '[#S] '
+set -g status-left '#[fg=magenta,bold] #S '
 set -g status-left-length 24
-set -g status-right "#{s|$HOME|~|:pane_current_path}  #[fg=yellow,bold]#h  #[fg=cyan,none]%b %d %I:%M  #[fg=white]#(bat) "
+set -g status-right "#[fg=brightblack]#{s|$HOME|~|:pane_current_path}・#[fg=brightwhite]%b %d %I:%M#[fg=brightblack]・#[fg=blue]#(bat) "
 set -g status-right-length 200
 
-set -g status-style fg=colour7
-set -g window-status-current-style fg=colour10
-set -g message-style fg=colour11,bg=colour8
-set -g pane-border-style fg=colour8
-set -g pane-active-border-style fg=colour8
+set -g mode-style fg=black,bg=cyan
+set -g status-style fg=brightblack
+set -g window-status-current-style fg=brightwhite
+set -g message-style fg=yellow
+set -g pane-border-style fg=brightblack
+set -g pane-active-border-style fg=brightblack
 
 set -g base-index 1
 set -g pane-base-index 1
