--- a/config/alacritty/dark.yml
+++ b/config/alacritty/dark.yml
@@ -1,17 +1,17 @@
 colors:
   # Default colors
   primary:
-    background: '0x2e3440'
+    background: '0x272b35'
     foreground: '0xe5e9f0'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x2e3440'
+    text: '0x272b35'
     cursor: '0xe5e9f0'
 
   # Normal colors
   normal:
-    black:   '0x2e3440'
+    black:   '0x272b35'
     red:     '0xbf616a'
     green:   '0xa3be8c'
     yellow:  '0xebcb8b'
